Fixing <EditTagEntry> layout on mobile.
Now it'll split into two rows below 500px.

--- a/frontend/src/scss/pages/_edit-tag.scss
+++ b/frontend/src/scss/pages/_edit-tag.scss
@@ -15,7 +15,7 @@
         width: 70%;
         height: 80%;
         max-width: 45rem;
-        min-width: 25rem;
+        min-width: 10rem;
         overflow: auto;
         
         background-color: $color_white;
